--- a/Desktop/Web/css/index.css
+++ b/Desktop/Web/css/index.css
@@ -81,10 +81,8 @@ body {
 
 .main__fixed-menu {
   max-width: 350px;
-  height: 500px;
   padding: 30px;
   background-color: rgba(166, 139, 139, 0.1882352941);
-  height: 235vh;
 }
 
 .main__catalog {
@@ -207,6 +205,7 @@ body {
   display: flex;
   padding: 20px 0px 20px 20px;
   background-color: #EEE9E9;
+  border-top: 4px solid #790000;
 }
 
 .footer__info {
@@ -251,4 +250,4 @@ body {
   color: #790000;
   font-size: 16px;
   font-family: "Inter-Regular";
-}
+}/*# sourceMappingURL=index.css.map */
